todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoapp-svc
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 5678
      targetPort: 5000
